--- a/ShopUseGamifications/ShopUseGamifications/MainWindow.xaml
+++ b/ShopUseGamifications/ShopUseGamifications/MainWindow.xaml
@@ -8,8 +8,8 @@
        Title="UnrealWindow" Height="350" Width="350" x:Name="MyWindow"
         AllowsTransparency="True" Background="Transparent" WindowStyle="None"  MouseLeftButtonDown="move_MouseLeftButtonDown">
     <Grid Height="300" Width="300">
-        <Border Width="auto" Height="300" BorderBrush="LimeGreen" BorderThickness="2"
-                CornerRadius="0,30,0,30" VerticalAlignment="Bottom">
+        <Border Width="auto" Height="279" BorderBrush="LimeGreen" BorderThickness="2"
+                CornerRadius="0,30,0,30" VerticalAlignment="Bottom" Margin="0,0,-25,21">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientBrush.GradientStops>
@@ -26,7 +26,17 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition Height="auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Button x:Name="SignIn" Content="Sign in" Background="#cee3ff" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="26" RenderTransformOrigin="0.5,0.5" Margin="14,5,0,0">
+                <Button x:Name="SignIn" Content="Sign in" Background="#cee3ff" HorizontalAlignment="Left" VerticalAlignment="Top" Width="115" Height="26" RenderTransformOrigin="0.759,0.359" Margin="12,4,0,0" Click="SignIn_Click">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-3.883"/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
+                <Button x:Name="SignUp" Content="Sign up" Background="#cee3ff" HorizontalAlignment="Left" VerticalAlignment="Top" Width="114" Height="26" RenderTransformOrigin="0.5,0.5" Margin="129,4,0,0" Click="SignUp_Click">
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -36,17 +46,7 @@
                         </TransformGroup>
                     </Button.RenderTransform>
                 </Button>
-                <Button x:Name="SignUp" Content="Sign up" Background="#cee3ff" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="26" RenderTransformOrigin="0.5,0.5" Margin="143,5,0,0">
-                    <Button.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform AngleX="-30"/>
-                            <RotateTransform/>
-                            <TranslateTransform X="-6"/>
-                        </TransformGroup>
-                    </Button.RenderTransform>
-                </Button>
-                <Button x:Name="CloseButton" Click="CloseButton_Click" Background="#cee3ff" Margin="298,0,2,269" RenderTransformOrigin="1.733,-0.36" Height="25" VerticalAlignment="Bottom" >
+                <Button x:Name="CloseButton" Click="CloseButton_Click" Background="#cee3ff" Margin="258,0,42,270" RenderTransformOrigin="1.733,-0.36" Height="26" VerticalAlignment="Bottom" >
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -58,7 +58,7 @@
                     <TextBlock Width="8" Height="15" ><Run Text="X"/></TextBlock>
                 </Button>
 
-                <TextBox Margin="48,148,84,134" RenderTransformOrigin="0.611,0.611">
+                <TextBox Name="textBoxLogin" Margin="48,129,84,153" RenderTransformOrigin="0.611,0.611" Visibility="Hidden">
                     <TextBox.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -68,7 +68,7 @@
                         </TransformGroup>
                     </TextBox.RenderTransform>
                 </TextBox>
-                <TextBox Margin="42,203,90,79" RenderTransformOrigin="0.5,0.5">
+                <TextBox Name="textBoxPassword" Margin="42,196,90,86" RenderTransformOrigin="0.5,0.5" Visibility="Hidden">
                     <TextBox.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -78,7 +78,7 @@
                         </TransformGroup>
                     </TextBox.RenderTransform>
                 </TextBox>
-                <Button x:Name="Sign" Content="Sign in" Background="#cee3ff" HorizontalAlignment="Left" Margin="29,0,0,0" Grid.Row="2" VerticalAlignment="Top" Width="267" Height="23" RenderTransformOrigin="0.5,0.5">
+                <Button x:Name="Sign" Content="Sign up" Background="#cee3ff" HorizontalAlignment="Left" Margin="26,276,0,0" VerticalAlignment="Top" Width="289" Height="23" RenderTransformOrigin="0.5,0.5" Click="Sign_Click">
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -88,17 +88,7 @@
                         </TransformGroup>
                     </Button.RenderTransform>
                 </Button>
-                <Label x:Name="labelLogin" Content="Login" HorizontalAlignment="Left" Margin="119,112,0,0" VerticalAlignment="Top" Width="46" RenderTransformOrigin="1.066,0.538" FontStyle="Italic" FontSize="16">
-                   <Label.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform AngleX="-15"/>
-                            <RotateTransform/>
-                            <TranslateTransform X="-4"/>
-                        </TransformGroup>
-                    </Label.RenderTransform>
-                </Label>
-                <Label x:Name="labelPassword" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="102,174,0,0" Width="76" RenderTransformOrigin="0.5,0.5" FontSize="16" FontStyle="Italic">
+                <Label x:Name="labelLogin" Content="Login" HorizontalAlignment="Left" Margin="132,90,0,0" VerticalAlignment="Top" Width="51" RenderTransformOrigin="1.066,0.538" FontStyle="Italic" FontSize="16" Visibility="Hidden">
                     <Label.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -108,6 +98,166 @@
                         </TransformGroup>
                     </Label.RenderTransform>
                 </Label>
+                <Label x:Name="labelPassword" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="118,155,0,0" Width="76" RenderTransformOrigin="0.5,0.5" FontSize="16" FontStyle="Italic" Visibility="Hidden">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-15"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-4"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <Label x:Name="labelNickname" Content="Nickname" HorizontalAlignment="Left" Margin="25,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <Label x:Name="labelName" Content="Name" HorizontalAlignment="Left" Margin="26,110,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <Label x:Name="labelEmail" Content="Email" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="26,150,0,0" RenderTransformOrigin="0.5,0.5">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <Label x:Name="labelPasswords" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="26,190,0,0" RenderTransformOrigin="0.5,0.5">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <Label x:Name="labelConfirmpasswords" Content="Confirm Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="23,230,0,0" RenderTransformOrigin="0.5,0.5">
+                    <Label.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </Label.RenderTransform>
+                </Label>
+                <TextBox x:Name="textBoxNickname" Margin="115,76,75,206" RenderTransformOrigin="0.611,0.611">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+                <TextBox x:Name="textBoxEmail" Margin="81,155,99,127" RenderTransformOrigin="0.611,0.611">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+                <TextBox x:Name="textBoxName" Margin="92,115,90,167" RenderTransformOrigin="0.611,0.611">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+                <TextBox x:Name="textBoxPasswords" Margin="95,195,87,87" RenderTransformOrigin="0.611,0.611">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+                <TextBox x:Name="textBoxConfirmPasswords" Margin="132,236,50,46" RenderTransformOrigin="0.611,0.611">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-30"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+                <TextBlock  Height="16" HorizontalAlignment="Left" Margin="35,56,0,0" x:Name ="errormessageNick" VerticalAlignment="Top" Width="243"  OpacityMask="Crimson" Foreground="#FFE5572C" RenderTransformOrigin="0.5,0.5" >
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock  Height="16" HorizontalAlignment="Left" Margin="35,97,0,0" x:Name ="errormessageName" VerticalAlignment="Top" Width="229"  OpacityMask="Crimson" Foreground="#FFE5572C" RenderTransformOrigin="0.5,0.5" >
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock  Height="16" HorizontalAlignment="Left" Margin="36,136,0,0" x:Name ="errormessageEmail" VerticalAlignment="Top" Width="219"  OpacityMask="Crimson" Foreground="#FFE5572C" RenderTransformOrigin="0.5,0.5" >
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock  Height="16" HorizontalAlignment="Left" Margin="36,176,0,0" x:Name ="errormessagePassword" VerticalAlignment="Top" Width="230"  OpacityMask="Crimson" Foreground="#FFE5572C" RenderTransformOrigin="0.5,0.5" >
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock  Height="16" HorizontalAlignment="Left" Margin="33,217,0,0" x:Name ="errormessageConfirmPassword" VerticalAlignment="Top" Width="270"  OpacityMask="Crimson" Foreground="#FFE5572C" RenderTransformOrigin="0.5,0.5" >
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-25"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-6"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
 
             </Grid>
         </Border>
