--- a/ShopUseGamifications/ShopUseGamifications/WindowShopeHome.xaml
+++ b/ShopUseGamifications/ShopUseGamifications/WindowShopeHome.xaml
@@ -178,11 +178,34 @@
         </Grid>
         <TabControl Style="{StaticResource TabControlStyle}" Margin="10,45,10,10" SelectionChanged="TabControl_SelectionChanged">
             <TabItem x:Name="Profile" Style="{StaticResource TabItemStyle}" Header="Profile">
-                <Grid HorizontalAlignment="Left" Height="216" VerticalAlignment="Top" Width="294">
-                    <TextBlock x:Name="userLevel" TextWrapping="Wrap" Text="UserLevel" Height="19" VerticalAlignment="Bottom" Margin="0,0,143,187"/>
-                    <Image x:Name="image" Margin="148,10,0,90" Source="Resources\default_avatar.png"/>
-                    <TextBlock x:Name="userName" TextWrapping="Wrap" Margin="0,102,143,90"><Run Text="UserName"/></TextBlock>
-                    <TextBlock x:Name="userEmail" TextWrapping="Wrap" Text="UserEmail" Margin="0,52,143,148"/>
+                <Grid HorizontalAlignment="Left" Height="311" VerticalAlignment="Top" Width="582" Margin="10,7,0,0">
+                    <TextBlock x:Name="userLevel" TextWrapping="Wrap" Text="UserLevel" Height="18" VerticalAlignment="Bottom" Margin="21,0,425,283" TextAlignment="Center"/>
+                    <ProgressBar HorizontalAlignment="Left"	    
+                     Value="{Binding Progress}"
+		             VerticalAlignment="Top"
+		             Width="151"
+		             Name="LevelBar"
+		             Foreground="#FF566AC3" Height="17" Margin="16,29,0,0" RenderTransformOrigin="0.5,0.5">
+                        <ProgressBar.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform AngleX="-36"/>
+                                <RotateTransform/>
+                                <TranslateTransform X="-5"/>
+                            </TransformGroup>
+                        </ProgressBar.RenderTransform>
+                    </ProgressBar>
+                    <TextBlock x:Name="contentLevelbar" Text="{Binding ElementName=LevelBar, Path=Value, StringFormat={}{0:0}/{0:0}}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="-6.952,-3.521" Margin="18,28,425,264" Height="19" Width="139" Foreground="#FFA8C8D6" TextAlignment="Center"  />
+                    <Image x:Name="imageUser" Margin="358,10,10,90" Source="Resources\default_avatar.png"/>
+                    <TextBlock x:Name="userName" TextWrapping="Wrap" Margin="153,148,279,136"><Run Text="UserName"/></TextBlock>
+                    <TextBlock x:Name="userEmail" TextWrapping="Wrap" Text="UserEmail" Margin="153,106,279,178"/>
+                    <Label x:Name="labelEmail" Content="Email" HorizontalAlignment="Right" Margin="0,106,487,0" VerticalAlignment="Top" Width="85" Height="27"/>
+                    <Label x:Name="labelName" Content="Name" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Height="27" Width="63"/>
+                    <Label x:Name="labelNewPassword" Content="New Password" HorizontalAlignment="Left" Margin="10,185,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="labelNewConfirmPassword" Content="New Confirm Password" HorizontalAlignment="Left" Margin="10,232,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.075,0.462"/>
+                    <TextBlock x:Name="textNewPassword" HorizontalAlignment="Left" Margin="153,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="150"/>
+                    <TextBlock x:Name="textNewConfirmPassword" HorizontalAlignment="Left" Margin="156,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="147"/>
+                    <Button x:Name="btLoadNewPicture" Content="Load Picture" HorizontalAlignment="Left" Margin="417,243,0,0" VerticalAlignment="Top" Width="75" Click="btLoadNewPicture_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Style="{StaticResource TabItemStyle}" Header="Tab2" Content="tab2"/>
